[gd_scene load_steps=12 format=3 uid="uid://dtgdtnx6osy5s"]

[ext_resource type="Theme" uid="uid://buo32rgi3lfa" path="res://Resources/main_theme.tres" id="1_rg5gd"]
[ext_resource type="Script" path="res://CODs/Templates/cod_template.gd" id="2_1sd77"]
[ext_resource type="Texture2D" uid="uid://53i282i8hktt" path="res://CODs/GasStationSushi/sushis.svg" id="3_qhgu0"]
[ext_resource type="PackedScene" uid="uid://x7mo1q4x3t61" path="res://CODs/Templates/upgrade_panel_template.tscn" id="4_kopt6"]
[ext_resource type="StyleBox" uid="uid://ct5yd6r3vc2id" path="res://Resources/wood_panel_disabled_style_box.tres" id="5_6rxql"]
[ext_resource type="Texture2D" uid="uid://dpeowam834s4l" path="res://Assets/Textures/plain-padlock.svg" id="5_46c61"]
[ext_resource type="StyleBox" uid="uid://b51iagk840c21" path="res://Resources/wood_panel_hovered_style_box.tres" id="5_j708u"]
[ext_resource type="StyleBox" uid="uid://bfqr6wj15ajt8" path="res://Resources/wood_panel_pressed_style_box.tres" id="6_43256"]
[ext_resource type="StyleBox" uid="uid://cr3mq7lbmupfm" path="res://Resources/wood_panel_style_box.tres" id="7_1ithm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ffshh"]
bg_color = Color(0, 0, 0, 0.294118)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kkgmk"]
bg_color = Color(1, 1, 1, 1)

[node name="CodTemplate" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = ExtResource("1_rg5gd")
script = ExtResource("2_1sd77")
cod_name = "Gas Station Sushi"
cod_icon = ExtResource("3_qhgu0")
upgrades_scene = ExtResource("4_kopt6")

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 389.0
grow_horizontal = 2
mouse_filter = 1

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Icon" type="TextureRect" parent="Panel/MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("3_qhgu0")
expand_mode = 5
stretch_mode = 5

[node name="Owned" type="Label" parent="Panel/MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 48
text = "1"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Name" type="Label" parent="Panel/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Gas Station Sushi"
horizontal_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="ProgressBar" type="ProgressBar" parent="Panel/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/background = SubResource("StyleBoxFlat_ffshh")
theme_override_styles/fill = SubResource("StyleBoxFlat_kkgmk")
value = 50.0
show_percentage = false

[node name="TimeRemaining" type="Label" parent="Panel/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "1:05"

[node name="SPS" type="Label" parent="Panel/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
text = "Souls Per Second: "
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 16

[node name="Buy" type="Button" parent="Panel/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
theme_override_font_sizes/font_size = 42
theme_override_styles/disabled = ExtResource("5_6rxql")
theme_override_styles/hover = ExtResource("5_j708u")
theme_override_styles/pressed = ExtResource("6_43256")
theme_override_styles/normal = ExtResource("7_1ithm")
text = "Buy
(1000k)"

[node name="Upgrades" type="Button" parent="Panel/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
theme_override_font_sizes/font_size = 42
theme_override_styles/hover = ExtResource("5_j708u")
theme_override_styles/pressed = ExtResource("6_43256")
theme_override_styles/normal = ExtResource("7_1ithm")
text = "Upgrades"

[node name="LockIcon" type="TextureRect" parent="Panel"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("5_46c61")
expand_mode = 3
stretch_mode = 5

[connection signal="pressed" from="Panel/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/Buy" to="." method="_on_buy_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/Upgrades" to="." method="_on_upgrades_pressed"]
